# obs-transition-table

./: CMakeLists.txt  README.md  buildspec.json  installer.iss.in  transition-table.cpp  transition-table.hpp
.github/workflows/: build.yml
CI/macos/: installer-macos.pkgproj.in  transition-table.pkgproj
data/locale/: de-DE  de-DE.ini  en-US.ini  es-ES.ini  nl-NL.ini  pt-BR.ini  zh-CN.ini
